# llm-opencode

./: .gitignore  README.md  llm_opencode.py  pyproject.toml
.github/workflows/: tests.yml
tests/: _fakes.py  _helpers.py  conftest.py  test_anthropic_chat.py  test_cli.py  test_fetch_cached_json.py  test_llm_opencode.py  test_protocol.py  test_registration.py
tests/cassettes/test_llm_opencode/: test_anthropic_protocol_prompt.yaml  test_openai_protocol_prompt.yaml
tests/cassettes/test_protocol/: test_anthropic_protocol_prompt.yaml
