[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["llm_opencode.py"]

[project]
name = "llm-opencode"
version = "0.1a1"
description = "LLM plugin for OpenCode Go subscription models"
readme = "README.md"
authors = [{name = "Brendon"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm>=0.27.1",
    "httpx",
    "openai>=1.57.0",
    "anthropic",
]

[project.urls]
Homepage = "https://github.com/brendonmackenzie/llm-opencode"

[project.entry-points.llm]
opencode = "llm_opencode"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-cov", "inline-snapshot", "pytest-asyncio", "pytest-timeout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"
addopts = "-ra --strict-markers --strict-config --cov=llm_opencode"
markers = [
    "vcr: tests that replay VCR cassettes",
    "slow: tests that are slow to run (deselect with -m 'not slow')",
]

[tool.coverage.run]
source = ["llm_opencode"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 95
